[tool.poetry]
name = "asn"
version = "0.1.0"
description = ""
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asn_h = 'asn.main:run_hex'
asn_b = 'asn.main:run_bin'
